<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

       <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
            <ImageView
            android:id="@+id/return"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/return"
            android:hint="@string/return"
            android:src="@drawable/arrow_left_small" >
            </ImageView>

             <ImageView
                 android:id="@+id/logout"
                 android:layout_width="38dp"
                 android:layout_height="38dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:contentDescription="@string/logout"
                 android:hint="@string/logout"
                 android:src="@drawable/ic_menu_logout" />

             <ImageView
                 android:id="@+id/reminder"
                 android:layout_width="38dp"
                 android:layout_height="38dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="18dp"
                 android:layout_toLeftOf="@+id/logout"
                 android:contentDescription="@string/reminder"
                 android:hint="@string/reminder"
                 android:src="@drawable/ic_menu_move_down" />

             <ImageView
                 android:id="@+id/search"
                 android:layout_width="38dp"
                 android:layout_height="38dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="15dp"
                 android:layout_toLeftOf="@+id/reminder"
                 android:contentDescription="@string/search"
                 android:hint="@string/search"
                 android:src="@drawable/ic_menu_search" />

             <ImageView
                 android:id="@+id/add"
                 android:layout_width="38dp"
                 android:layout_height="38dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="19dp"
                 android:layout_toLeftOf="@+id/search"
                 android:contentDescription="@string/add"
                 android:hint="@string/add"
                 android:src="@drawable/ic_menu_invite" />
            
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="393dp"
            android:orientation="vertical" >
             
            <MapView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/mapview">
                "
                
            </MapView>
        </LinearLayout>

</LinearLayout>